fixed some paragraph

--- a/manual-v3/IPS_installation_guide/Makefile
+++ b/manual-v3/IPS_installation_guide/Makefile
@@ -12,3 +12,7 @@ pdf-es:
 html-es:
 	publican build --formats html --langs "es-ES" --config publican-es-ES.cfg
 
+txt-es:
+	publican build --formats txt --langs "es-ES" --config publican-es-ES.cfg
+
+
